Slightly improve reuse

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -9,10 +9,4 @@ SPDX-PackageContactPerson = "johannes.bechberger@sap.com"
 path = "*"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2025 SAP SE or an SAP affiliate company and contributors"
-SPDX-License-Identifier = "Apache-2.0
-
-[[annotations]]
-path = "vscode-plugin"
-precedence = "aggregate"
-SPDX-FileCopyrightText = "2025 SAP SE or an SAP affiliate company and contributors"
-SPDX-License-Identifier = "MIT
+SPDX-License-Identifier = "Apache-2.0"
