--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,91 @@
 git
+
+# Built application files
+*.apk
+*.aar
+*.ap_
+*.aab
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+build/
+gradle-app.setting
+.gradletasknamecache
+
+# Local configuration file (sdk path, etc)
+local.properties
+keystore.properties
+
+# Log Files
+*.log
+
+# Android Studio
+.idea/
+*.iml
+.navigation/
+captures/
+.externalNativeBuild/
+.cxx/
+*.iws
+*.ipr
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
+
+# MacOS desktop service store files
+.DS_Store
+
+# Android Studio caches
+.idea/caches/
+.idea/modules.xml
+
+# Android Studio generated files
+.fleet/
+.gradle/
+.idea/modules
+.idea/shelf
+gen-external-apklibs/
+output.json
+
+# IntelliJ
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Version control
+vcs.xml
+
+# Android Profiler
+*.hprof
+
+# Downloaded models
+**/app/src/main/assets/models/
+**/app/src/main/assets/downloaded/
+**/app/src/main/resources/downloaded/
+app/model.task
+app/model.task.tmp
+
+# Generated files
+app/release/
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
