--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -43,7 +43,51 @@ jobs:
         with:
           name: vsix-package
           path: "vscode-plugin/*.vsix"
+
+  build-apk:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for tags
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Grant execute permission for gradlew
+        run: cd ai-app && chmod +x ./gradlew
+
+      - name: Build with Gradle
+        run: cd ai-app && ./gradlew assembleDebug
+
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: ai-app/app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Build Release APK
+        run: cd ai-app && ./gradlew assembleRelease
+        env:
+          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
+
+      - name: Upload Release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: ai-app/app/build/outputs/apk/release/app-release.apk
           
+  
   release:
     needs: build
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') || github.event_name == 'workflow_dispatch'
@@ -58,6 +102,16 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: vsix-package
+
+      - name: Download debug APK
+        uses: actions/download-artifact@v4
+        with:
+          name: app-debug
+          
+      - name: Download release APK
+        uses: actions/download-artifact@v4
+        with:
+          name: app-release
           
       - name: Get package info
         id: package
@@ -121,12 +175,22 @@ jobs:
             
             This is an automated snapshot build from the latest commit on the main branch.
             
-            ## How to install
+            ## How to install the VSCode extension
             1. Download the .vsix file
             2. In VS Code, go to Extensions (Ctrl+Shift+X)
             3. Click the "..." menu in the top-right
             4. Select "Install from VSIX..."
             5. Browse to the downloaded file
+
+             ## Installation Instructions for the Android App
+            1. Download the APK file to your Android device
+            2. Enable "Install from unknown sources" in your device settings
+            3. Open the APK file to install
+            4. Launch the app
+            
+            ### Available APKs:
+            - `app-debug.apk` - Debug version for testing
+            - `app-release.apk` - Release version for production use
           name: Snapshot Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
